--- a/tesi.bib
+++ b/tesi.bib
@@ -1,8 +1,110 @@
 @article{Phrack-96,
 author= {Aleph One},
 title= {Smashing The Stack For Fun And Profit},
-journal={phrack}
-year={96}
+journal={phrack},
+year={96},
+}
+
+@misc{Heitman-14,
+author= {Christian Heitman and Iván Arce},
+title= {BARF: A multiplatform open source Binary Analysis and Reverse
+                  engineering Framework},
+year={2014},
+}
+
+@Article{roemer-12, 
+author = {Ryan Roemer and Erik Buchanan and Hovav Shacham and Stefan Savage},
+title = {Return-Oriented Programming: Systems, Languages, and Applications},
+journal = {ACM Trans. Info. \& System Security},
+                  year = 2012, 
+volume = 15, 
+number = 1, 
+month = mar}
+
+@online{pyelftools,
+  author = {Eli Bendersky},
+  title = {pyelftools},
+  year = 2014,
+  url = {https://github.com/eliben/},
+  urldate = {2014-11-25}
+}
+
+@MISC{pddl-97,
+    author = {},
+    title = {PDDL - The Planning Domain Definition Language},
+    year = {1997}
+}
+
+@inproceedings{Shacham-2007,
+ author = {Shacham, Hovav},
+ title = {The Geometry of Innocent Flesh on the Bone: Return-into-libc Without Function Calls (on the x86)},
+ booktitle = {Proceedings of the 14th ACM Conference on Computer and Communications Security},
+ series = {CCS '07},
+ year = {2007},
+ isbn = {978-1-59593-703-2},
+ location = {Alexandria, Virginia, USA},
+ pages = {552--561},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1315245.1315313},
+ doi = {10.1145/1315245.1315313},
+ acmid = {1315313},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {instruction set, return-into-libc, turing completeness},
+} 
+
+@article{Roemer-2012,
+ author = {Roemer, Ryan and Buchanan, Erik and Shacham, Hovav and Savage, Stefan},
+ title = {Return-Oriented Programming: Systems, Languages, and Applications},
+ journal = {ACM Trans. Inf. Syst. Secur.},
+ issue_date = {March 2012},
+ volume = {15},
+ number = {1},
+ month = mar,
+ year = {2012},
+ issn = {1094-9224},
+ pages = {2:1--2:34},
+ articleno = {2},
+ numpages = {34},
+ url = {http://doi.acm.org/10.1145/2133375.2133377},
+ doi = {10.1145/2133375.2133377},
+ acmid = {2133377},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {NX, RISC, Return-oriented programming, SPARC, W-xor-X, attacks, control flow integrity, memory safety, return-into-libc, x86},
+} 
+
+
+@misc{c0ntex,
+author= {c0ntex},
+title= {Bypassing non-executable-stack during exploitation using return-to-libc},
+url = {http://www.infosecwriters.com/text_resources/pdf/return-to-libc.pdf},
+year={96},
+}
+
+
+@incollection{Barrett-14,
+  Author =	 {Clark Barrett and Cesare Tinelli},
+  Booktitle =	 {Handbook of Model Checking},
+  Editor =	 {Edmund Clarke and Tom Henzinger and Helmut Veith},
+  Publisher =	 {Springer},
+  Title =	 {Satisfiability Modulo Theories},
+  Year =	 2014,
+}
+
+
+
+@inproceedings {Davi-2014,
+author = {Lucas Davi and Ahmad-Reza Sadeghi and Daniel Lehmann and Fabian Monrose},
+title = {Stitching the Gadgets: On the Ineffectiveness of Coarse-Grained Control-Flow Integrity Protection},
+booktitle = {23rd USENIX Security Symposium (USENIX Security 14)},
+year = {2014},
+month = Aug,
+isbn = {978-1-931971-15-7},
+address = {San Diego, CA},
+pages = {401--416},
+url = {https://www.usenix.org/conference/usenixsecurity14/technical-sessions/presentation/davi},
+publisher = {USENIX Association},
 }
 
 @inproceedings{roglia:2009,
