--- a/tesi.tex
+++ b/tesi.tex
@@ -12,7 +12,7 @@
 \usepackage{listings}
 %\usepackage{amsmath}
 %\usepackage{amsfonts}
-%\usepackage{fancyhdr}
+\usepackage{fancyhdr}
 
 %listening
 \lstset{
