--- a/introduzione.tex
+++ b/introduzione.tex
@@ -38,7 +38,7 @@ tipo di attacco. Con l'introduzione dell'isolamento delle pagine di
 memoria è stato possibile adottare una politica dei permessi in
 memoria con granulità una singola pagina. Il tentativo di eseguire
 delle istruzioni presenti in una pagina non eseguible, così come il
-tentativo di scrivere su una pagina non scrivbile causa l'arresto del
+tentativo di scrivere su una pagina non scrivibile causa l'arresto del
 programma. Il codice leggittimo viene mappato in memoria in pagine
 eseguibili ma non scrivibili, mentre stack e dati che il programma
 deve manipolare vengono mappati su pagine scrivibili ma non
@@ -55,38 +55,39 @@ Tuttavia l'isolamento delle pagine di memoria e la casualizzazione
 dello stack non evita la compromissione nè del flusso del programma nè
 dello schema dello stack. Una delle tecniche utilizzata per ottenere
 il controllo di un programma nonostante lo stack non sia marcato come
-eseguibile si chiama \emph{return-to-libc}\cite{c0ntex}. In un utilizzo
-tipico di questa tecnica il flusso del programma non viene dirottato
-su un payload iniettato dall'attaccante ma su una funzione di una
-qualche libreria utilizzata dal programma. Su un architettura a 32bit
-gli argomenti vengono passati alle funzioni posizionandoli secondo un
-ordine preciso (definito dalla \emph{calling convention}) sullo
-stack. Dato che anche lo schema dello stack può essere compromesso
-l'attaccante ha di fatto il controllo degli argomenti da passare alla
-funzione. Potendo, ad esempio, richiamare la funzione system della
-libc con argomenti arbitrari è possibile eseguire un qualiasi comando
-sulla macchina in cui si sta eseguendo il programma, oppure chiamando
-la funzione mprotect (sempre nella libc) con gli opportuni argomenti
-si possono modificare i permessi della pagina di memoria dove risiede
-lo stack, rendendola eseguibile. A quel punto redirezionare il flusso
-del programma sul codice iniettato sullo stack non ne provocherà
-l'arresto. La tecnica funziona perchè il codice ad essere eseguito
-risiede in un area di memoria eseguibile. Una tecnica per mitigare
-questo tipo di attacco è la casualizzazione dello spazio degli
-indirizzi (\emph{Address Space Layout Randomization}). Le librerie
-vengono mappate ad indirizzi di memoria casuali, che cambiano da
-esecuzione ad esecuzione del programma. In questo modo non si
-conoscono gli indirizzi delle funzioni e un attacco di tipo
-return-to-libc naive non risulta possibile. Tuttavia su 32bit e sotto
-alcune condizioni questi indirizzi possono essere facilmente ricavati
-con un attacco di tipo bruteforce\cite{Shacham:2004}. Anche se su
-un'architettura 64bit un attacco bruteforce non risulta fattibile è
-tuttavia possibile che si riesca a sfruttare qualche altro errore di
-programmazione per ottenere l'indirizzo della libreria, riuscendo così
-a montare comunque l'attacco.
+eseguibile si chiama \emph{return-to-libc}\cite{c0ntex}. In un
+utilizzo tipico di questa tecnica il flusso del programma non viene
+dirottato su un payload iniettato dall'attaccante ma su una funzione
+di una qualche libreria utilizzata dal programma. Su un architettura a
+32bit gli argomenti vengono passati alle funzioni posizionandoli
+secondo un ordine preciso (definito dalla \emph{calling convention})
+sullo stack. Dato che anche lo schema dello stack può essere
+compromesso l'attaccante ha di fatto il controllo degli argomenti da
+passare alla funzione. Potendo, ad esempio, richiamare la funzione
+\lstinline{system} della libc con argomenti arbitrari è possibile
+eseguire un qualiasi comando sulla macchina in cui si sta eseguendo il
+programma, oppure chiamando la funzione \lstinline{mprotect} (sempre
+nella libc) con gli opportuni argomenti si possono modificare i
+permessi della pagina di memoria dove risiede lo stack, rendendola
+eseguibile. A quel punto redirezionare il flusso del programma sul
+codice iniettato sullo stack non ne provocherà l'arresto. La tecnica
+funziona perchè il codice ad essere eseguito risiede in un area di
+memoria eseguibile. Una tecnica per mitigare questo tipo di attacco è
+la casualizzazione dello spazio degli indirizzi (\emph{Address Space
+  Layout Randomization}). Le librerie vengono mappate ad indirizzi di
+memoria casuali, che cambiano da esecuzione ad esecuzione del
+programma. In questo modo non si conoscono gli indirizzi delle
+funzioni e un attacco di tipo return-to-libc naive non risulta
+possibile. Tuttavia su 32bit e sotto alcune condizioni questi
+indirizzi possono essere facilmente ricavati con un attacco a forza
+bruta\cite{Shacham:2004}. Anche se su un'architettura 64bit un attacco
+a forza bruta non risulta fattibile è tuttavia possibile che si riesca
+a sfruttare qualche altro errore di programmazione per ottenere
+l'indirizzo della libreria, riuscendo così a montare comunque
+l'attacco.
 
-Una generalizzazione della \emph{return-to-libc} è la tecnica che
-prende il nome di \emph{Return Oriented
+Una generalizzazione della return-to-libc è la tecnica che prende il
+nome di \emph{Return Oriented
   Programming}\cite{Shacham-2007,Roemer-2012}. In questo caso il
 flusso viene redirezionato non più all'inzio di una funzione, ma
 all'inizio di una piccola serie di istruzioni, già presenti in un area
@@ -104,7 +105,8 @@ concatenare un numero arbitrario di queste piccole serie di istruzioni
 dimostrato che, quando sono presenti opportunee tipologie di gadget,
 utilizzando il ROP si possono effettuare computazioni
 turing-complete. Utilizzando opportunee sequenze di gadget è possibile
-applicare tecniche per eludere varie misure di protezione \cite{roglia:2009}.
+applicare tecniche per eludere varie misure di protezione
+\cite{roglia:2009}.
 
 Un programma può essere compilato affinchè il suo codice sia
 indipendente dalla posizione in cui viene mappato in memoria
@@ -120,14 +122,14 @@ tipi ROP, anche se non risultano efficaci o l'overhead è troppo grande
 La \emph{Satisfability Modulo Theories}\cite{Barrett-14} è
 un'estensione della logica del primo ordine, che viene estesa con
 teorie come quella dei bitvector e degli array, rendendolo un ottimo
-strumento per la modellazione molto dell'architettura di un
-elaboratore (specialmente dei registri e della memoria). Negli ultimi
-tempi è stata dedicata molta attenzione all'utilizzo di risolutori di
-formule SMT con applicazione nell'ambito della sicurezza\cite{}
+strumento per la modellazione dell'architettura di un elaboratore
+(specialmente dei registri e della memoria). Negli ultimi tempi è
+stata dedicata molta attenzione all'utilizzo di risolutori di formule
+SMT con applicazione nell'ambito della sicurezza\cite{}
 informatica. Riuscendo infatti a modellare le istruzioni e il contesto
 di esecuzione di un programma in formule SMT, il risolutore può essere
 utilizzato, ad esempio, per verificare che un programma aderisca ad
-una data semantica o, per estrapolarne la semantica stessa.
+una data semantica o per estrapolarne la semantica stessa.
 
 Anche la simulazione simbolica viene utilizzata sempre di più
 nell'ambito della sicurezza. Ad esempio può essere utilizzata per
@@ -137,13 +139,13 @@ il programma, ad un valore concreto di ingresso viene sostituito un
 valore simbolico. Ogni volta che questo valore viene manipolato viene
 tenuta traccia delle operazioni effettuate su di esso. Le strutture
 dati del programma possono essere espresse in funzione di quel dato
-valore simbolico. E' possibile poi ricavare in modo automatico una
+valore simbolico. È possibile poi ricavare in modo automatico una
 formula SMT che rappresenti queste relazioni, in modo da poter
 interrogare un risolutore per chiedere, ad esempio, per quali valori
 in ingresso il programma segua o meno una branch o per quali valori
-una struttura dati abbia o no un dato valore.
+una struttura dati contenga o no un dato valore.
 
-Nell'ambito della ROP un risolutore SMT può essere utilizzato sia per
+Nell'ambito del ROP un risolutore SMT può essere utilizzato sia per
 estrapolare in maniera automatica la semantica di un gadget, sia per
 ottenere le condizioni di partenza che consentino ad un gadget di
 eseguire una determinata funzione (ad esempio i valori di registro per
