--- a/tesi.bib
+++ b/tesi.bib
@@ -5,6 +5,12 @@ journal={phrack},
 year={96},
 }
 
+@inproceedings{schwartz-2011,
+   author = {Edward J. Schwartz and Thanassis Avgerinos and David Brumley},
+   title = {{Q}: Exploit Hardening Made Easy},
+   booktitle = {Proceedings of the {USENIX} Security Symposium},
+   year = {2011}
+}
 @misc{Heitman-14,
 author= {Christian Heitman and Iván Arce},
 title= {BARF: A multiplatform open source Binary Analysis and Reverse
