Implementazione attuale: modulo dropper

--- a/tesi.tex
+++ b/tesi.tex
@@ -89,7 +89,7 @@ stringstyle=\footnotesize,
 %% \clearpage{\pagestyle{empty}\cleardoublepage}
 %% \clearpage{\pagestyle{empty}\cleardoublepage}
 %% \frontmatter
-%% \tableofcontents
+\tableofcontents
 
 \include{introduzione}
 \include{dropper}
