--- a/dropper.tex
+++ b/dropper.tex
@@ -426,10 +426,148 @@ chunks in ingresso.
 
 \subsection{dropper}
 
+\subsubsection{Interazione con l'utente}
 
-Attualmente il modulo dropper implementa come strategie per scrivere
-sulla memoria l'utilizzo della funzione \lstinline{read} oppure
-l'utilizzo di una serie di gadget che ci consentano la scrittura 
+Attualmente dropper si interfaccia all'utente tramite alcune funzioni
+della classe \lstinline{dropper}. Il costruttore di questa classe
+riceve come argomento il percorso sul file system dove risiede il file
+oggetto eseguibile da analizzare. Le operazioni di analisi vengono
+avviate tramite la funzione \lstinline{analyze_all}. Una volta
+analizzato si può richiamare la funzione
+\lstinline{build_spawn_shell_payload} che si occupera di generare la
+catena vera e propria. Anche se queste sono le uniche chiamate
+essenziali l'utente ha a disposizione ulteriori funzioni:
+\begin{itemize}
+
+\item \lstinline{set_can_control_fd} setta il filedescriptor
+  controllato dall'utente (-1 se nessun file descriptor può essere
+  controllato)
+
+\item \lstinline{set_function_for_address_resolving} indica la
+  funzione di riferimento da utilizzare nell'applicazione di tecniche
+  che ricavino l'indirizzo di funzioni casualizzate in memoria
+  partendo da valori nella GOT table. Questa funzione dev'essere già
+  stata richiamata almeno una volta al momento dell'esecuzione della
+  catena
+
+\item \lstinline{set_writeable_area} setta l'indirizzo nel quale
+  provare a scrivere gli argomenti per la funzione da richiamare. Di
+  default questo valore è settato all'indirizzo di caricamento in
+  memoria della sezione \lstinline{.data}
+
+\item \lstinline{set_cmd} setta il comando da eseguire sulla macchina
+  bersaglio una volta che l'exploit ha avuto successo
+
+\end{itemize}
+
+Quando il file eseguibile è stato analizzato e le informazioni
+necessarie impostate il metodo \lstinline{build_spawn_shell_payload}
+cerca di generare una catena che avvi il comando impostato.
+
+\subsubsection{Analisi degli import}
+
+Se una funzione viene utilizzata dal programma, anche se il suo
+indirizzo reale viene casualizzato, sarà presente un elemento relativo
+a quella funzione all'interno della procedure linkage table. Questo
+elemento, ammesso che il binario non sia stato compilato come
+indipendente dalla posizione in memoria (PIE), ha una posizione
+nota. Possiamo quindi ritornare al suo indirizzo per emulare la
+chiamata a quella funzione (return-to-plt). Nella GOT invece ogni
+elemento inizialmente, e quindi anche staticamente nel file, contiene
+l'indirizzo dell'istruzione successiva nell'elemento della PLT
+relativo alla stessa funzione. Per ogni funzione la rilocazione
+associata, nella sezione \lstinline{.rel.plt}, contiene nel campo
+\lstinline{r_offset} l'indirizzo dell'elemento nella GOT table. A
+partire da quest'ultimo, per le considerazioni appena fatte, può
+essere ricavato l'indirizzo della entry nella PLT. Gli indirizzi del
+relativo elemento della GOT e di quello nella PLT vengono ricavati per
+ogni funzione utilizzata dal file oggetto eseguibile nel metodo
+\lstinline{get_imports}.
+
+\subsubsection{costruzione della catena}
+
+Attualmente il modulo dropper per prima cosa cerca di scrivere in
+un'area di memoria scrivibile i dati ai quali punteranno gli argomenti
+dell'invocazione della funzione \lstinline{execve}. Nel caso
+quest'area di memoria non viene specificata dall'utente viene
+utilizzato l'indirizzo di caricamento in memoria della sezione
+\lstinline{.data}, visto che viene caricata in un'area di memoria
+marcata come scrivibile. Gli argomenti e i dati veri e propri vengono
+creati dal modulo partendo dal comando che si è deciso di eseguire
+sulla macchina (nella funzione \lstinline{payload_execve_args}. Se si
+può controllare un file descriptor e \lstinline{read} è presente
+nell'insieme delle funzioni utilizzate dal programma allora dropper
+crea una catena che ritorni all'elemento all'interno della PLT
+relativo \lstinline{read} e fà in modo che vengano letti, dal file
+descriptor indicato, una quantità di dati pari alla dimensione dei
+dati da scrivere e che essi vengano scritti nell'area di memoria
+scelta come area scrivibile. Per far questo viene utilizzato il metoto
+\lstinline{get_ret_func_chunk} del modulo gadgets tool il quale ci
+consente di creare una catena che richiami una funzione di cui si
+conosce l'indirizzo. È compito poi dell'utente fare in modo che al
+momento della chiamata di questa funzione il file descriptor indicato
+si trovi nello stato giusto a restituire i valori calcolati dal
+modulo. I valori da fornire nel file descriptor vengono forniti
+all'utente nel paramentro \lstinline{fd_payload} di dropper. 
+%%TODO
+Esempio?
+
+Attualmente è implementata una seconda strategia nel caso non sia
+presente la funzione read e/o non si controlli nessun file
+descriptor. Essa consiste nell'utilizzare una serie di gadget che
+possano spostare valori dallo stack in una locazione di memoria
+arbitraria.  Per costruire una catena del genere si chiama la funzione
+\lstinline{build_memory_write} del modulo gadgets tools che prende
+come argomenti l'indirizzo della memoria dove scrivere e i dati da
+scrivere. Solitamente, come vedremo in \ref{build_memory_write}, le
+catene generate in questo modo tendono ad essere piuttosto lunghe.
+
+%%TODO inserire strategie non implementate?
+
+Per quanto riguarda la seconda fase, la chiamata della funzione, sono
+state implementate solo due strategie. La prima nel caso
+\lstinline{execve} sia presente all'interno delle funzioni utilizzate
+dal programma. In questo caso la generazione della parte restante
+della catena è banale e, come visto nel paragrafo precedente, viene
+costruita dalla funzione \lstinline{get_ret_func_chunk} del modulo
+gagdettools. Più interessante è il caso in cui il file oggetto
+eseguibile non utilizzi questa funzione. Una strategia che è possibile
+adottare in questo caso si basa sul calcolo dell'indirizzo della
+funzione voluta partendo da una funzione utilizzata dal programma, il
+cui indirizzo viene ricavato dal relativo elemento nella GOT table. La
+funzione dev'essere già stata chiamata almeno una volta, questo fa si
+che nella GOT table sia presente l'indirizzo reale e non l'indirizzo
+del relativo elemento all'interno della PLT. L'indirizzo può essere
+sia calcolato in un registro o in una zona di memoria per poi
+sfruttare una tipologia di gadget che ci permetta di ``saltare''
+all'indirizzo calcolato (\emph{got dereferencing}). È anche possibile,
+se l'eseguibile non è compilato con RORELOC, modificare il valore
+della GOT in loco, aggiungendo l'offset necessario (\emph{got
+  patching}). Attualmente è implementata solo la seconda strategia. Il
+modulo gadgets tools offre il metodo \lstinline{buil_memory_write} che
+si occupa dei dettagli implementativi di questo tipo di catena. Viene
+chiamato da dropper con i seguenti parametri:
+
+\begin{itemize}
+  \item l'indirizzo di memoria dove eseguire la somma: l'indirizzo
+    dell'elemento della GOT da ``patchare''
+
+  \item il valore da aggiungere: l'offset relativo tra la funzione
+    utilizzata come base e la voluta
+
+  \item il valore di base: l'offset che la funzione di base ha
+    all'interno del file oggetto condiviso della libreria. Come
+    vedremo questo rende possibile utilizzare la tecnica anche quando
+    le tipologie di gadget disponibili non sono ideali al prezzo di
+    sacrificare un'affidabilità del 100\% (vedi sez. \rif{adc})
+\end{itemize}
+
+La classe inoltre contiene alcuni metodi per il salvataggio dei dati
+relativi ai gadgets su disco, questo perchè l'analisi di eseguibili
+molto grandi può durare diversi minuti. Al loro interno questi metodi
+utilizzano la libreria \lstinline{pickle} per la serializzazione degli
+oggetti.
+
 
 %TODO spostare in implementazione attuale?
 %% Questo avviene emulando tutti i gadgets, e nello stesso momento
