--- a/dropper.tex
+++ b/dropper.tex
@@ -559,7 +559,7 @@ chiamato da dropper con i seguenti parametri:
     all'interno del file oggetto condiviso della libreria. Come
     vedremo questo rende possibile utilizzare la tecnica anche quando
     le tipologie di gadget disponibili non sono ideali al prezzo di
-    sacrificare un'affidabilità del 100\% (vedi sez. \rif{adc})
+    sacrificare un'affidabilità del 100\% (vedi sez. \ref{adc})
 \end{itemize}
 
 La classe inoltre contiene alcuni metodi per il salvataggio dei dati
